# riven-ts

./: .coderabbit.yaml  .dockerignore  .editorconfig  .env  .env.example  .env.sample  .gitignore  .gitmodules  .oxfmtrc.json  .prettierignore  .prettierrc.json  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  LICENCE  QUICK_START.md  README.md  apollo.config.json  commitlint.config.mjs  commitlint.config.ts  docker-compose.api.yml  docker-compose.program.yml  docker-compose.yaml  docker-compose.yml  eslint.config.ts  flake.nix  graphql.config.yml  knip.config.ts  knip.json  knip.ts  lint-staged.config.mjs  oxlint.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.ts  tsconfig.json  turbo.json  turbo.jsonc
.github/: dependabot.yml
.github/agents/: 4.1-Beast.agent.md  Thinking-Beast-Mode.agent.md
.github/workflows/: build-docker-images.yaml  build-wiki.yaml  codeql.yml  deploy-wiki.yaml  generate-coverage-baseline.yaml  persist-coverage-baseline.yaml  pr-quality.yaml  report-coverage-results.yaml  report-knip-results.yaml  run-turbo-task.yaml  validate-pr-quality.yaml  validate-pr-title.yaml  verify.yaml
.husky/: install.mjs
apps/api/: instrumentation.ts  next.config.ts  package.json  tsconfig.app.json  tsconfig.json
apps/vfs-daemon/: Cargo.toml  README.md  example_catalog.json  package.json  turbo.jsonc
apps/vfs-daemon/src/: grpc_client.rs  main.rs
apps/vfs-daemon/src/filesystem/: catalog.rs  file_handles.rs  mod.rs  streaming_fs.rs
elastic-local/: .env  docker-compose.yml
patches/: @zkochan__fuse-shared-library.patch
(+1443 files in other folders)
